👠⚡️ added transparent adalytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
     {% endif %}
   </head>
   <body class="{% if page.slug %}page-{{ page.slug }} {% endif %}{% if page.accent %}accent-{{ page.accent }} {% endif %}">
+    <img src="https://sapphic-squid-vampires.glitch.me/counter.png?fallback=melody.dev&color=black" alt="" style="vertical-align: bottom;" aria-hidden="true">
     <span id="top"></span>
 {{ content }}
   </body>
