more tile magic

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -25,6 +25,7 @@ $duo: #f0d175;
 $tre: #75f0db;
 
 $colors-list:
+  ("gray", #464646),
   ("red", #DA5F6E),
   ("blue", #5F67DA),
   ("purple", #763E94),
