--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -24,12 +24,18 @@ layout: page
       grid-column: auto / span 7;
       grid-row: auto / span 7;
     }
+    @include media-query(1319px) {
+      grid-column: auto / span calc({{ post.tile.width }} + 1);
+      /* grid-row: auto / span calc({{ post.tile.height }} + 1); */
+      margin-left: 0;
+      /* margin-top: 0; */
+    }
   }
 {% endunless %}{% endfor %}{% endcapture %}
 {{ tiles_style | scssify }}
 </style>
 
-<tiles class="hidden-phone">
+<tiles class="posts">
   {% for post in page.posts %}{% unless post.hidden %}
     <a href="{{ post.url }}" id="tile-{{ post.slug }}" class="tile bg-{{ post.accent }} {{ post.tile.class }}">
       {% if post.draft %}<span class="draft-banner">COMING SOON</span>{% endif %}
@@ -38,7 +44,7 @@ layout: page
   {% endunless %}{% endfor %}
 </tiles>
 
-<blogroll class="visible-phone">
+<!-- <blogroll class="visible-phone">
   {% for post in page.posts %}{% unless post.hidden %}
     <a href="{{ post.url }}" class="bg-{{ post.accent }}">
       <h3>{{ post.title }}</h3>
@@ -48,7 +54,7 @@ layout: page
       </p>
     </a>
   {% endunless %}{% endfor %}
-</blogroll>
+</blogroll> -->
 
 <hr>
 
