change some pngs to svgs

--- a/_sass/overrides.scss
+++ b/_sass/overrides.scss
@@ -7,3 +7,11 @@
     color: black;
   }
 }
+
+.page-ie6 {
+  .feature img[src*="svg"] {
+    width: 100vw;
+    height: auto;
+    max-height: initial;
+  }
+}
