--- a/_sass/features.scss
+++ b/_sass/features.scss
@@ -3,9 +3,14 @@
   display: inline-block;
   min-height: $spacing-unit*10;
   img {
-    width: 100%;
+    width: auto;
     height: auto;
+    max-height: 80vh;  
     margin: 0 auto -20px;
+    &[src*="svg"] {
+      height: 75vh;
+      min-height: 600px;
+    }
   }
   tiles {
     position: absolute;
