📉🐁 Updated with Glitch

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,7 +74,7 @@ layout: default
     <h3>About Melody</h3>
     <img src="/media/avatar.png" alt="Photo of Melody!" width="100" height="100" title="Melody's profile picture!" style="float: left; margin-right: 1ch"/>
     <p>
-      Melody is a web developer, designer, and community event organizer based in Philly. You can find them on Twitter at <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://icon.now.sh/twitter/1da1f2" height="12" width="12" /> @pixelyunicorn </a>.
+      Melody is a web developer, designer, and community event organizer based in Philly. You can find them on Twitter at <a class="uno" href="https://twitter.com/pixelyunicorn" target="_blank" rel="noreferrer"><img role="presentation" src="https://cdn.glitch.com/2d246102-8341-4166-a220-b39d607c9218/icon-twitter.svg" height="12" width="12" /> @pixelyunicorn </a>.
     </p>
     <h3>Tags &amp; Sharing</h3>
     <p>
