--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,8 +12,9 @@ $border-radius: 8px;
 
 /* Fonts */
 $header-font: "Basic Sans", basic-sans, "Helvetica Neue", helvetica, arial, sans-serif;
-$body-font: "Tisa Pro", ff-tisa-web-pro, basic-sans, "Helvetica Neue", helvetica, arial, sans-serif;
-$font-size: 18px;
+$body-font: "Calluna", "Basic Sans", basic-sans, georgia, serif;
+$font-size: 16px;
+$line-height: 1.75em;
 
 /* Colors */
 $background: #f2f2f2;
