--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -63,7 +63,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.45rem;
 }
 
 h4 {
@@ -72,10 +72,10 @@ h4 {
 
 p {
   max-width: $content-width;
-  line-height: 1.5em;
+  line-height: $line-height;
 
   &.lead {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
 
     @include media-query($on-tablet) {
       font-size: 1.25rem;
