--- a/_includes/patreon-beg.html
+++ b/_includes/patreon-beg.html
@@ -3,8 +3,8 @@
   <p>
     I do a lot of things: I write, draw, code, stream, and also drink a lot of tea. I would love to keep doing what I love to do, but these things take time in energy. That's where you come in. By supporting what I do, I have less to worry about so I can go back to doing what I love 💖
     <br><br>
-    <a class="button" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer" style="color:currentColor"><img role="presentation" src="https://ko-fi.com/favicon.png" height="16" width="16" /> <strong>Buy me a Taco!</strong></a>
-    <a class="button" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer" style="color:currentColor"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" alt="Patreon logo" width="16" height="16"> Subscribe on Patreon!</a>
+    <a class="button" href="https://ko-fi.com/pixely" target="_blank" rel="noreferrer"><img role="presentation" src="https://ko-fi.com/favicon.png" height="16" width="16" /> <strong>Buy me a Taco!</strong></a>
+    <a class="button" href="https://patreon.com/madebymelody" target="_blank" rel="noreferrer"><img src="https://c5.patreon.com/external/favicon/favicon-16x16.png?v=69kMELnXkB" alt="Patreon logo" width="16" height="16"> Subscribe on Patreon!</a>
     <a class="button" onclick="hide_patreon()">Remind me later <noscript>(JS required)</noscript></a>
   </p>
 </blockquote>
