fix construction message

--- a/_includes/construction.html
+++ b/_includes/construction.html
@@ -1,1 +1,11 @@
-<!-- <p class="construction"><strong>Coming soon!</strong> I'm in the middle of working on a new website that showcases some my most recent work. In the meantime, you can find my current portfolio at <a href="https://2019.melody.cool">2019.melody.cool</a>.</p> -->
+        <div class="construction">
+            <p>
+            {% include icons/welcome.svg size="128" %}
+            </p>
+            <h1>
+            Nothing here yet!
+            </h1>
+            <p>
+            <em>(I'm probably still writing content for this page. Please check back later.)</em>
+            </p>
+        </div>
