--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ layout: default
         {% include read-time.html %} read
       </p>
     </div>
-    <div class="visible-tablet">
+    <!-- <div class="visible-tablet">
       <br class="hidden-phone">
       <h1>{{ page.title }}</h1>
       <p class="metadata">
@@ -45,7 +45,7 @@ layout: default
       {% include read-time.html %} read
     </p>
     {% if page.image %}<img src="{{ page.image | prepend: page.url }}" alt="{{ page.title }}" />{% endif %}
-    {% endif %}
+    {% endif %} -->
 </header>
 <section id="main">
   {% include toggle-theme.html class="hidden-tablet" %}
