clarify semantic markup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
     <span id="top"></span>
     <p>Happy <a href="https://css-naked-day.github.io" target="_blank">CSS Naked Day</a>! 😳</p>
     <p>
-      For the next 48 hours, I've removed my stylesheets to give you a sense of what my website looks like without it, and to highlight the importance of semantic markup for accessibility + usability. Enjoy! 
+      For the next 48 hours, I've removed my stylesheets to give you a sense of what my website looks like without it, and to highlight the importance of semantic HTML markup for accessibility + usability. Enjoy! 
     </p><p>—Melody ✨</p>
     <hr/>
 {{ content }}
