Add footnote on alt website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,8 +43,9 @@
     <span id="top"></span>
     <p>Happy <a href="https://css-naked-day.github.io" target="_blank">CSS Naked Day</a>! 😳</p>
     <p>
-      For the next 48 hours, I've removed my stylesheets to give you a sense of what my website looks like without it, and to highlight the importance of semantic HTML markup for accessibility + usability. Enjoy! 
-    </p><p>—Melody ✨</p>
+      For the next 48 hours, I've removed my stylesheets to give you a sense of what my website looks like without it, and to highlight the importance of semantic HTML markup for accessibility + usability. (A version of my website with styling is still online at <a href="https://melody.glitch.me">melody.glitch.me</a>.) Enjoy! 
+    </p>
+    <p>—Melody ✨</p>
     <hr/>
 {{ content }}
     <script>if(navigator.doNotTrack != 1 && document.title != "four-hundred-and-four") { document.write('<img src="https://sapphic-squid-adalytics.glitch.me/counter.png?fallback=melody.dev&color=black" alt="" style="vertical-align: bottom;" width="1" height="1" aria-hidden="true" />'); }</script>
