Uncomment theme toggle

--- a/_includes/toggle-theme.html
+++ b/_includes/toggle-theme.html
@@ -1,6 +1,6 @@
-<!-- <span class="toggle-themes hidden-phone {{ include.class }}">
+<span class="toggle-themes hidden-phone {{ include.class }}">
   <a onClick="toggle_theme('dark')" class="button uno toggle-theme-dark">{% include icons/idea-on.svg size="20" %} <span class="hidden-phone">Change Theme <noscript>(JS required)</noscript></span></a>
   <a onClick="toggle_theme('light')" class="button uno toggle-theme-light">{% include icons/idea-off.svg size="20" %} <span class="hidden-phone">Change Theme <noscript>(JS required)</noscript></span></a>
   <br>
   <a onClick="reset_theme()" class="button uno toggle-theme-reset hidden-phone">Reset <noscript>(JS required)</noscript></a>
-</span> -->
+</span>
