change font source

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
-
+    <link rel="stylesheet" href="https://use.typekit.net/apw7exh.css">	
+    
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
 
