--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,8 +12,8 @@ $border-radius: 8px;
 
 /* Fonts */
 $header-font: "Basic Sans", basic-sans, "Helvetica Neue", helvetica, arial, sans-serif;
-$body-font: "Calluna", "Basic Sans", basic-sans, georgia, serif;
-$font-size: 16px;
+$body-font: ff-tisa-web-pro, "Basic Sans", basic-sans, georgia, serif;
+$font-size: 18px;
 $line-height: 1.75em;
 
 /* Colors */
