move meta previews to glitch

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ layout: default
       {% if page.hidden %}Patron Exclusive •{% endif %}
       {% include read-time.html %} read
     </p>
-    {% if page.image %}<img src="{{ page.image | prepend: page.url }}" alt="{{ page.title }}" />{% endif %}
+    {% if page.image %}<img src="{{ page.image }}" alt="{{ page.title }}" />{% endif %}
     {% endif %} -->
 </header>
 <section id="main">
