--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
     <meta property="og:url" content="{{ page.url | prepend: site.domain }}">
     {% if page.image %}
-    <meta property="og:image" content="{{ page.image | prepend: page.url | prepend: site.domain }}">
+    <meta property="og:image" content="{{ page.image }}">
     {% endif %}{% if page.date %}
     <meta property="og:article:author" content="Melody Starling">
     <meta property="og:article:published_time" content="{{ page.date }}">
@@ -36,7 +36,7 @@
     <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 200 }}{% else %}{{ site.description }}{% endif %}">
     {% if page.image %}
-    <meta name="twitter:image:src" content="{{ page.image | prepend: page.url | prepend: site.domain }}">
+    <meta name="twitter:image:src" content="{{ page.image }}">
     <meta name="twitter:image:alt" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     {% endif %}
   </head>
